# shortest-paths-in-graphs-of-convex-sets

./: .gitignore  2d_example_experiments.ipynb  contraction_hierarchy.ipynb  convex_dijkstra_test.ipynb  gcs_dijkstra.ipynb  pyproject.toml
spp/: convex_functions.py  graph.py  shortest_path.py
