[tool.poetry]
name = "shortest-paths-in-graphs-of-convex-sets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shortest_paths_in_graphs_of_convex_sets"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
drake = {url = "https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-cp311-cp311-macosx_12_0_x86_64.whl"}
ipykernel = "^6.23.1"
scipy = "^1.10.1"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
